Change all return types to futures